# drake

drake/examples/HelloWorld/: CMakeLists.txt  helloworld.cpp
drake/examples_chiara/message_sys/: CMakeLists.txt  message_receiver.cpp  message_sys.cpp
drake/examples_chiara/message_sys/RPG_Drake_ROS_Bridge/: RPG_Quad_ROS_Publisher.cpp  RPG_Quad_ROS_Publisher.h  RPG_Quad_ROS_Receiver.h
ros/message_sys/: CMakeLists.txt  Drake_to_ros.cpp  RPG_Drake_ROS_demo.cpp  RPG_Quadrotor_Plant.cpp  RPG_Quadrotor_Plant.h  RPG_quad_controller.cpp  drake_to_ros_publisher.cpp  drake_to_ros_publisher.h  lqr_demo_publisher.cc  lqr_demo_publisher.h  lqr_demo_subscriber.cpp  lqr_demo_subscriber.h  lqr_wrapper_system.h  message_receiver.cc  message_sys.cpp  message_sys_demo.cc  message_sys_demo.cpp  msgs_chiara.cc  msgs_chiara.cpp  package.xml  quad_controller.cpp  quad_simulator.cpp  quadrotor_lqr_demo.cc  quadrotor_plant.cc  quadrotor_plant.h  send_msg_demo.cpp  sub_msg_demo.cpp
ros/message_sys/RPG_Drake_ROS_Bridge/: RPG_Quad_ROS_Publisher.cc  RPG_Quad_ROS_Publisher.cpp  RPG_Quad_ROS_Publisher.h  RPG_Quad_ROS_Receiver.cc  RPG_Quad_ROS_Receiver.cpp  RPG_Quad_ROS_Receiver.h
ros/message_sys/include/: msgs_chiara.h
ros/message_sys/include/example_chiara_message/: exmpl_chiara.h
